<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Eletric Car</string>
    <string name="cars">Cars</string>
    <string name="favorites">Favorites</string>
    <string name="price">Price</string>
    <string name="price_value">R$ 300.00</string>
    <string name="batery">Batery</string>
    <string name="power">Power</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_value">23 Min</string>
    <string name="price_kwh">Price Kwh</string>
    <string name="traveled_km">Traveled Km</string>
    <string name="calculate">Calculate</string>
</resources>