<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cars"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/favorites"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_cars"
        app:layout_constraintTop_toTopOf="@id/tv_cars" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/eletric_car"
        app:layout_constraintLeft_toLeftOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_cars" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_value"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toEndOf="@id/tv_price"
        />

    <TextView
        android:id="@+id/tv_batery"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/batery"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_batery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_value"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_batery"
        app:layout_constraintStart_toEndOf="@id/tv_batery"
        />

    <TextView
        android:id="@+id/tv_power"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/power"
        app:layout_constraintTop_toBottomOf="@id/tv_batery"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_power_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kWh"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_power"
        app:layout_constraintStart_toEndOf="@id/tv_power"
        />

    <TextView
        android:id="@+id/tv_recharge"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/recharge"
        app:layout_constraintTop_toBottomOf="@id/tv_power"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_recharge_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge_value"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_recharge"
        app:layout_constraintStart_toEndOf="@id/tv_recharge"
        />
</androidx.constraintlayout.widget.ConstraintLayout>